# 20241114_uv2nix_torch_cpu

./: flake.nix  pyproject.toml
