[project]
name = "uv2nix-hammer-app"
version = "0.1.0"
description = "Learn to build scGraphformer"
requires-python = ">=3.10,<3.11"
dependencies = [
	"torch",
]

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cpu"
